fix: horizontal scroll, background ervices, types

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,9 +47,6 @@
         height: 20% !important;
     }
 
-    .bg-black{
-        background-color: var(--color-main);
-    }
 
     .bg-wear-resistant{
         background: url("/coverages/wear-resistant/hero.webp") no-repeat center;
